--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Bogus" version="22.3.2" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net461" />
   <package id="Fare" version="2.1.1" targetFramework="net461" />
 </packages>
